# full-kit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.fullkit/scripts/bash/: fullkit-blueprint.sh  fullkit-goal.sh  fullkit-specify.sh
.github/workflows/: ci.yml  pages.yml  pre-release.yml  pull-request.yml  release.yml
.github/workflows/scripts/: create-release-packages.sh
memory/: constitution.md
scripts/bash/: common.sh  create-new-blueprint.sh  create-new-feature.sh  create-new-goal.sh  update-blueprint-context.sh  update-fullkit-context.sh  update-goal-context.sh
scripts/powershell/: common.ps1  create-new-goal.ps1
src/fullkit_cli/: __init__.py
templates/: agent-file-template.md  blueprint-template.md  checklist-template.md  goal-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: blueprint.md  goal.md
