[project]
name = "fullkit-cli"
version = "1.0.3"
description = "Full Kit CLI, combining Goal-Driven, Blueprint-Driven, and Spec-Driven Development (GDD, BDD, SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
fullkit = "fullkit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fullkit_cli"]